- Added alpha support to wxImage::Paste() (Steven Van Ingelgem)
- Use current date when opening popup in generic wxDatePickerCtrl.
- Remove associated help text from wxHelpProvider when a window is destroyed.
- Added wxSizerFlags::ReserveSpaceEvenIfHidden() and
  wxRESERVE_SPACE_EVEN_IF_HIDDEN sizer flag.
- Added wxWindow::ClientToWindowSize() and WindowToClientSize() helpers.

All (Unix):

- Fixed shared libraries to not depend on GStreamer when built with
  --enable-media; only wxMedia library depends on it now.
- wxLaunchDefaultBrowser() now uses xdg-open if available.
- Don't close UDP socket if an empty datagram is received (Mikkel S)
- Honour locale modifiers such a "@valencia" in system locale (Tim Kosse)

wxMSW:

- Fix rare bug with messages delivered to wrong wxSocket (Tim Kosse).
- Fix setting icons when they have non-default (16*16 and 32*32) sizes.
- Fixed wxLocale::GetInfo to use the C locale.
- Don't enable disabled windows when showing them (Harry McKame).
- Fix assert when using owner-drawn menu items with the newest (Vista) SDK.
- Fixed wxTextCtrl to not process clipboard events twice if there's
  a custom wxEVT_COMMAND_TEXT_* event handler.
- Fix wxComboBox to not lose the current value if it was programmatically set
  to a value not in a list of choices on popup close (Kolya Kosenko)
- Switching wxListCtrl to report mode from another one now uses full row
  highlight, just as if the control were created in report mode initially.
- Use correct index of the right-clicked column in wxListCtrl in the
  corresponding event even when the control is scrolled horizontally.
- Implement wxRadioBox::Reparent() correctly (Vince Harron).
- Make context sensitive help work for the text part of wxSpinCtrl.
- wxFileType::GetCommand() now looks at Explorer associations and CurVer
  for increased reliability and conformance to user expectations.
- Fixed double Init() call in wxTopLevelWindow causing a memory leak on
  SmartPhone.